test/trivial/bradc/entrypoint/twomains.good
<command line>: error: multiple 'proc main's in module 'twomains'
twomains.chpl:4: note: found 'proc main' here
twomains.chpl:11: note: found 'proc main' here
